--- a/labWebSpringIniaializeer/lab-7/src/main/resources/graphql/application.yml
+++ b/labWebSpringIniaializeer/lab-7/src/main/resources/graphql/application.yml
@@ -1,3 +1,14 @@
 spring:
   graphql:
     path: /graphql
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/testdb
+    username: # Place the username of your db
+    password: # Place the password for your db
+
+  #    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver # Not necessary for MySQL
+  jpa:
+    hibernate:
+      ddl-auto: 'update'
